--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 <div class="grid">
     <div class="bar4x4_1">
         <div class="favimg1">
-            <img src="IMAGEN/lavadora1.jpg" 
-            alt="lav1" height="150px" width="150px">
+            <a href="product01.html"><img src="IMAGEN/lavadora1.jpg" 
+            alt="lav1" height="150px" width="150px"></a>
         </div>
         <div class="textin1">
             <p>Secadora<br>SensorDry 9kg
@@ -101,8 +101,8 @@
     </div>
     <div class="bar4x4_2">
         <div class="favimg2">
-            <img src="IMAGEN/lavadora2.jpg" 
-            alt="lav2" height="150px" width="150px">
+            <a href="product02.html"><img src="IMAGEN/lavadora2.jpg" 
+            alt="lav2" height="150px" width="150px"></a>
         </div>
         <div class="textin2">
             <p>Lavaseca<br>AddWash™
@@ -112,8 +112,8 @@
     </div>
     <div class="bar4x4_3">
         <div class="favimg3">
-            <img src="IMAGEN/lavadora3.jpg" 
-            alt="lav3" height="150px" width="150px">
+            <a href="product03.html"><img src="IMAGEN/lavadora3.jpg" 
+            alt="lav3" height="150px" width="150px"></a>
         </div>   
         <div class="textin3">
             <p>Lavadora<br>Fondo especial
@@ -148,8 +148,8 @@
     <div class="grid">
         <div class="bar4x4_1">
             <div class="favimg2">
-                <img src="IMAGEN/lavadora2.jpg" 
-                alt="lav1" height="150px" width="150px">
+                <a href="product02.html"><img src="IMAGEN/lavadora2.jpg" 
+                alt="lav1" height="150px" width="150px"></a>
             </div>
             <div class="textin1">
                 <p>Lavaseca<br>AddWash™</p>
@@ -158,8 +158,8 @@
         </div>
         <div class="bar4x4_2">
             <div class="favimg4">
-                <img src="IMAGEN/lavadora4.jpg" 
-                alt="lav2" height="150px" width="150px">
+                <a href="product04.html"><img src="IMAGEN/lavadora4.jpg" 
+                alt="lav2" height="150px" width="150px"></a>
             </div>
             <div class="textin2">
                 <p>Lavadora <br>TurboWash 3D</p>
@@ -168,8 +168,8 @@
         </div>
         <div class="bar4x4_3">
             <div class="favimg1">
-                <img src="IMAGEN/lavadora1.jpg" 
-                alt="lav3" height="150px" width="150px">
+                <a href="product01.html"><img src="IMAGEN/lavadora1.jpg" 
+                alt="lav3" height="150px" width="150px"></a>
             </div>   
             <div class="textin3">
                 <p>Secadora<br>SensorDry 9kg</p>
@@ -178,8 +178,8 @@
         </div>
         <div class="bar4x4_4">
             <div class="favimg3">
-                <img src="IMAGEN/lavadora3.jpg" 
-                alt="lav4" height="150px" width="150px">
+                <a href="product03.html"><img src="IMAGEN/lavadora3.jpg" 
+                alt="lav4" height="150px" width="150px"></a>
                 </div>
                 <div class="textin4">
                     <p>Lavadora<br>Fondo especial</p>
@@ -189,24 +189,26 @@
     </div>
 </section>
 <section class="S-E">
-    <div class="Contenedor_Empresas">
-        <section class="Texto">
-            <div class="division1">
-                <h2>NO TE OLVIDES DE VISITAR NUESTRA</h2>
-            </div>
-            <div class="division2">
-                <h1><b>SECCION <br>
-                    EMPRESAS</b></h1>
-            </div>
-            <div class="division3">
-                <p> <b>
-                  AQUÍ ENCONTRARÁS DIVERSAS FORMAS DE USAR <br>
-                TUS PRODUCTOS Y ALARGAR EL TIEMPO DE VIDA
-                </b></p>
-            </div>
-        </section>
-    </div>
-    
+    <a href="sección-empresas.html" style="text-decoration: none;">
+        <div class="Contenedor_Empresas">
+            <section class="Texto">
+                <div class="division1">
+                    <h2>NO TE OLVIDES DE VISITAR NUESTRA</h2>
+                </div>
+                <div class="division2">
+                    <h1><b>SECCION <br>
+                        EMPRESAS</b></h1>
+                </div>
+                <div class="division3">
+                    <p><b>
+                    AQUÍ ENCONTRARÁS DIVERSAS FORMAS DE USAR <br>
+                    TUS PRODUCTOS Y ALARGAR EL TIEMPO DE VIDA
+                    </b>
+                    </p>
+                </div>
+            </section>
+        </div>
+    </a>
 </section>
 <section class="S-A">
     <div class="prueba">
@@ -223,7 +225,7 @@
         <address>
             <div class="info-contacto">
                 <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-                <a href="">electrohogar@electrohogar.com</a><br>
+                <a href="http://https://www.gmail.com">electrohogar@electrohogar.com</a><br>
                 Calle Arenas 230 , Villa Humedales - Indonesia <br>
                 +62 66518-9214</p>
             </div>
