address all pages + links sec lav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <form>
         <div class="cabecera-der">   
-            <button style="font-size: 11px; height: 22px; width: 90px;">MI CUENTA</button></a>
+            <button style="font-size: 11px; height: 22px; width: 90px;"><a href="http://www.facebook.com/login.php" style="text-decoration: none;">MI CUENTA</a></button>
             &nbsp;&nbsp;
             <input type="text" name="busqueda" id="busqueda" placeholder="Buscar..." style="width: 100px;">
         </div> 
@@ -54,8 +54,8 @@
             <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
             <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
               <ul class="submenu">
-                <li><a href="">LG</a></li>
-                <li><a href="">SAMSUNG</a></li>
+                <li><a href="sección-empresas.html">LG</a></li>
+                <li><a href="sección-empresas.html">SAMSUNG</a></li>
                 
               </ul>
             </li>
@@ -225,12 +225,12 @@
         <address>
             <div class="info-contacto">
                 <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-                <a href="http://https://www.gmail.com">electrohogar@electrohogar.com</a><br>
+                <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">electrohogar@electrohogar.com</a><br>
                 Calle Arenas 230 , Villa Humedales - Indonesia <br>
                 +62 66518-9214</p>
             </div>
             <div class="botoncontactanos">
-                <button>CONTACTANOS</button>
+                <button><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" style="text-decoration: none;">CONTACTANOS</a></button>
             </div>
         </address>
     </div>
