--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -107,13 +107,13 @@
         <div class="monsa">
             <address>
                 <div class="info-contacto">
-                GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-                <a href="">electrohogar@electrohogar.com</a><br>
-                Calle Arenas 230 , Villa Humedales - Indonesia <br>
-                +62 66518-9214 
+                    <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+                    <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">electrohogar@electrohogar.com</a><br>
+                    Calle Arenas 230 , Villa Humedales - Indonesia <br>
+                    +62 66518-9214</p>
                 </div>
                 <div class="botoncontactanos">
-                <button>CONTACTANOS</button>
+                    <button><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" style="text-decoration: none;">CONTACTANOS</a></button>
                 </div>
             </address>
         </div>
