--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -42,8 +42,8 @@
       <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
       <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
         <ul class="submenu">
-        <li><a href="">LG</a></li>
-        <li><a href="">SAMSUNG</a></li>
+        <li><a href="sección-empresas.html">LG</a></li>
+        <li><a href="sección-empresas.html">SAMSUNG</a></li>
         </ul>
       </li>
     </ul>
@@ -59,74 +59,76 @@
   <H1>SECCIÓN LAVANDERÍA</H1>
 </section> 
 <section id="aside_lavand">
-  <div class="clasificacion_filtro"> <h3>Marca</h3></div>
-    <input type="radio" name="filtro" id="filtro-all" checked>
-    <label for="todo">TODO</label>
-    <input type="radio" name="filtro" id="filtro-LG">
-    <label for="lg">LG</label>
-    <input type="radio" name="filtro" id="filtro-SAMSUNG">
-    <label for="san">SAMSUNG</label>
-    <div id="aside_lavand_prodc_lg">
-      <div class="prodc-lg">
-        <div class="main-lavan-prodc-img">
-          <a href="/product04.html"> <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="250px" width="250px"></a>
-        </div>
-        <div class="division_imagen_LG">
-          <section class="seccion">
-            <h1>LG</h1>
-            <h2>Lavadora TurboWash 3D</h2>
-            <p class="tarea_1">19 kg / 6MotionDD (2)</p>
-            <p>s/. 1,999 c/u</p>
-            <p>Disponible para despacho</p>
-            <p>Disponible para retiro </p>
-          </section> 
-        </div>
+  <div class="clasificacion_filtro">
+    <h3>Marca</h3>
+  </div>
+  <input type="radio" name="filtro" id="filtro-all" checked>
+  <label for="todo" id="filtro-all__text">TODO</label>
+  <input type="radio" name="filtro" id="filtro-LG">
+  <label for="lg" id="filtro-LG__text">LG</label>
+  <input type="radio" name="filtro" id="filtro-SAMSUNG">
+  <label for="san" id="filtro-SAMSUNG__text">SAMSUNG</label>
+  <div id="aside_lavand_prodc_lg">
+    <div class="prodc-lg">
+      <div class="main-lavan-prodc-img">
+        <a href="/product04.html"> <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="250px" width="250px"></a>
       </div>
-      <div class="prodc-lg">
-        <div class="main-lavan-prodc-img">
-          <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" alt="lavadora LG" height="250px" width="250px"></a>
-        </div>
-        <div class="division_imagen_LG">
-          <section class="seccion">
-            <h1>LG</h1>
-            <h2>Lavadora inteligente</h2>
-            <p class="tarea_1">8,5kg / Serie 9(5)</p>
-            <p>s/. 1,230 c/u</p>
-            <p>Disponible para despacho</p>
-            <p>Disponible para retiro </p>
-          </section> 
-        </div>
-      </div>
-    </div>
-    <div id="aside_lavand_prodc_smsng">
-      <div class="prodc-smsng">
-        <div class="main-lavan-prodc-img">
-          <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px"></a>
-        </div>
+      <div class="division_imagen_LG">
         <section class="seccion">
-          <h1>SAMSUNG</h1>
-          <h2>Secadora SensorDry</h2>
-          <p class="tarea_1">9 kg (4)</p>
-          <p>s/. 2,640 c/u</p>
+          <h1>LG</h1>
+          <h2>Lavadora TurboWash 3D</h2>
+          <p class="tarea_1">19 kg / 6MotionDD (2)</p>
+          <p>s/. 1,999 c/u</p>
           <p>Disponible para despacho</p>
           <p>Disponible para retiro </p>
-        </section>
-      </div>
-      <div class="prodc-smsng">
-        <div class="main-lavan-prodc-img">
-          <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" alt="lavadora LG" height="250px" width="250px"></a>        </div>
-        <div class="division_imagen_LG">
-          <section class="seccion">
-            <h1>SAMSUNG</h1>
-            <h2>Lavaseca AddWash™</h2>
-            <p class="tarea_1">20 kg / 12 kg (10)</p>
-            <p>s/.  3,270 c/u</p>
-            <p>Disponible para despacho</p>
-            <p>Disponible para retiro </p>
-          </section> 
-        </div>
+        </section> 
       </div>
     </div>
+    <div class="prodc-lg">
+      <div class="main-lavan-prodc-img">
+        <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" alt="lavadora LG" height="250px" width="250px"></a>
+      </div>
+      <div class="division_imagen_LG">
+        <section class="seccion">
+          <h1>LG</h1>
+          <h2>Lavadora inteligente</h2>
+          <p class="tarea_1">8,5kg / Serie 9(5)</p>
+          <p>s/. 1,230 c/u</p>
+          <p>Disponible para despacho</p>
+          <p>Disponible para retiro </p>
+        </section> 
+      </div>
+    </div>
+  </div>
+  <div id="aside_lavand_prodc_smsng">
+    <div class="prodc-smsng">
+      <div class="main-lavan-prodc-img">
+        <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px"></a>
+      </div>
+      <section class="seccion">
+        <h1>SAMSUNG</h1>
+        <h2>Secadora SensorDry</h2>
+        <p class="tarea_1">9 kg (4)</p>
+        <p>s/. 2,640 c/u</p>
+        <p>Disponible para despacho</p>
+        <p>Disponible para retiro </p>
+      </section>
+    </div>
+    <div class="prodc-smsng">
+      <div class="main-lavan-prodc-img">
+        <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" alt="lavadora LG" height="250px" width="250px"></a>        </div>
+      <div class="division_imagen_LG">
+        <section class="seccion">
+          <h1>SAMSUNG</h1>
+          <h2>Lavaseca AddWash™</h2>
+          <p class="tarea_1">20 kg / 12 kg (10)</p>
+          <p>s/.  3,270 c/u</p>
+          <p>Disponible para despacho</p>
+          <p>Disponible para retiro </p>
+        </section> 
+      </div>
+    </div>
+  </div>
 </section>
 
 <section id="main-lavan">
@@ -145,17 +147,17 @@
 
 <footer id="footer_lavan">
     <div class="monsa">
-        <address>
-            <div class="info-contacto">
-              <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
-                <a href="">electrohogar@electrohogar.com</a><br>
-                Calle Arenas 230 , Villa Humedales - Indonesia <br>
-                +62 66518-9214</p>
-            </div>
-            <div class="botoncontactanos">
-            <button>CONTACTANOS</button>
-            </div>
-        </address>
+      <address>
+        <div class="info-contacto">
+            <p>GRUPO 1 , ELECTRO-HOGAR S.A. <br>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">electrohogar@electrohogar.com</a><br>
+            Calle Arenas 230 , Villa Humedales - Indonesia <br>
+            +62 66518-9214</p>
+        </div>
+        <div class="botoncontactanos">
+            <button><a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin" style="text-decoration: none;">CONTACTANOS</a></button>
+        </div>
+      </address>
     </div>
     <div class="certus">
         <span class="registro">
