--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -84,9 +84,7 @@
         <div class="multimedia">
             <div>
                 <h2>Como usar tus productos</h2>
-            </div>
-            <div>
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/WkAXmrA24gQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0SK1ldY78Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
 
@@ -94,7 +92,7 @@
         </div>
         <div class="sugerencia">
             <div>
-                <h1>Comprobar las funciones y secciones de limpieza en la lavadora de carga frontal</h1>
+                <h2>Comprobar las funciones y secciones de limpieza en la lavadora de carga frontal</h2>
                 <p><b>Un mantenimiento regular garantiza una operación sin problemas.
                     Además, puede evitar que tu ropa tenga bacterias y malos olores. 
                     Lee estas instrucciones para mantener la lavadora mucho más limpia y saludable.</b></p>
@@ -111,11 +109,11 @@
                         baja de la tapa frontal, el filtro de bomba es una tapa redonda de color negro.</li>
                     <li>Deberemos de girar la tapa contra las manecillas del reloj para abrirla. Tener en 
                         cuenta que el producto deberá estar vacío (sin agua / ni ropa).</li>
-                        <img src="IMAGEN/samsung2.gif" alt="" width="400px">
-                        <img src="IMAGEN/samsung1.jpg" alt="" width="310px">
+                        <img src="IMAGEN/samsung2.png" alt="imagen_sansung2" width="400px">
+                        <img src="IMAGEN/samsung1.png" alt="imagen_sansung1" width="310px">
                     <li>Al destapar el filtro de bomba, limpiarlo con cepillo y abundante agua. 
                         A la vez limpiar la cavidad, eliminando los residuos/deshechos que se puedan encontrar.</li>
-                        <img src="IMAGEN/samsung3.gif" alt="" width="400px">
+                        <img src="IMAGEN/samsung3.png" alt="imagen_sansung3" width="400px">
                     <li>Culminamos volviendo a colocar el filtro de bomba y ejecutando un proceso rápido de lavado 
                         para comprobar su correcto funcionamiento. No deberá notar ningún tipo de filtración.</li>
                 </ul>
@@ -127,9 +125,10 @@
                 <label for="nombre opiniones">Nombre:</label>
                 <input type="text" name="nombre" id="nombre"><br>
                 <textarea name="opiniones" id="opiniones" cols="100%" rows="5"></textarea><br>
-                <input type="submit" value="Enviar">
             </form>
-            
+            <div id="boton_subir">
+             <button type="submit" value="Enviar">Enviar</button>
+            </div>
         </div>
     </article>
 
