--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -42,9 +42,9 @@
     <ul id="" class="menu">
       <li><a href="index.html"><b>HOME</b></a></li> |
       <li><a href="sección-lavandería.html"><b>LAVADO Y LIMPIEZA</b></a></li> |
-      <li><a href="sección-empresas.html"><b>MARCAS</b></a> 
+      <li><a href="#"><b>MARCAS</b></a> 
         <ul class="submenu">
-        <li><a href="sección-empresas.html">LG</a></li>
+        <li><a href="lg_empresa.html">LG</a></li>
         <li><a href="sección-empresas.html">SAMSUNG</a></li>
         </ul>
       </li>
