--- a/lg_empresa.html
+++ b/lg_empresa.html
@@ -33,7 +33,7 @@
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
     </script>
-    
+    <link rel="stylesheet" href="CSS/fueradeservicio.css">
 
 </head>
 <body>
@@ -84,40 +84,19 @@
         <div class="multimedia">
             <div>
                 <h2>Como usar tus productos</h2>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0SK1ldY78Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/851v1F81uEk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div>
 
             </div>
         </div>
         <div class="sugerencia">
-            <div>
-                <h2>Comprobar las funciones y secciones de limpieza en la lavadora de carga frontal</h2>
-                <p><b>Un mantenimiento regular garantiza una operación sin problemas.
-                    Además, puede evitar que tu ropa tenga bacterias y malos olores. 
-                    Lee estas instrucciones para mantener la lavadora mucho más limpia y saludable.</b></p>
-            </div>
-            <div>
-                <h3>Cómo limpiar el filtro de bomba/desechos/drenaje</h3>
-                <p>Consideramos informar que nuestros modelos cuenta con
-                    distintos tipos de filtros uno de ellos ayuda retener
-                     objetos que el usuario pueda omitir retirar.</p>
-                <p>A la vez consideremos que estos mismo objetos pueden llegar a dañar el producto</p>
-                <ul>
-                    <li>La ubicación del filtro de bomba para modelos de Carga Superior se encuentra a 
-                        espaldas de la lavadora, en los modelos de Carga Frontal se encuentra en la parte 
-                        baja de la tapa frontal, el filtro de bomba es una tapa redonda de color negro.</li>
-                    <li>Deberemos de girar la tapa contra las manecillas del reloj para abrirla. Tener en 
-                        cuenta que el producto deberá estar vacío (sin agua / ni ropa).</li>
-                        <img src="IMAGEN/samsung2.png" alt="imagen_sansung2" width="400px">
-                        <img src="IMAGEN/samsung1.png" alt="imagen_sansung1" width="310px">
-                    <li>Al destapar el filtro de bomba, limpiarlo con cepillo y abundante agua. 
-                        A la vez limpiar la cavidad, eliminando los residuos/deshechos que se puedan encontrar.</li>
-                        <img src="IMAGEN/samsung3.png" alt="imagen_sansung3" width="400px">
-                    <li>Culminamos volviendo a colocar el filtro de bomba y ejecutando un proceso rápido de lavado 
-                        para comprobar su correcto funcionamiento. No deberá notar ningún tipo de filtración.</li>
-                </ul>
-            </div>
+            <p>Si no encuentras tu producto o manual <a href="">contacta con nosotros</a>  <br>
+
+                Como líderes en el sector tecnológico y en la innovación ligada a la eficiencia energética, en LG Electronics estamos comprometidos con el medio ambiente. Por ello, ofrecemos todos los manuales y documentos actualizados de nuestros productos en formato digital para su lectura y descarga, evitando así un consumo excesivo de papel. Esta decisión forma parte de nuestro proyecto Smart Green: un movimiento cuyo compromiso es combatir el cambio climático favoreciendo la reducción de emisiones de CO2, así como el consumo responsable y el ahorro de electricidad, agua y energía.</p>
+        </div>
+        <div class="fservicio">
+            <h1>FUERA DE SERVICIO TEMPORALMENTE</h1>
         </div>
         <div class="opiniones" onload="javascript:cargarInicio()">
             <h2>Cuentanos tu experiencia con nuestros productos:</h2>
