--- a/product03.html
+++ b/product03.html
@@ -7,7 +7,7 @@
     <title>DV90K6800EX Secadora SensorDry 9 kg</title>
 
     <link rel="stylesheet" href="../CSS/principal.css">
-    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/product04.css">
 
@@ -48,28 +48,23 @@
         </ul>
       </li>
     </ul>
-    <div class="carrito">
-      <p style="text-align: center;;"><img src="IMAGEN/carrito.png" alt="carrito" height="20px" width="20px">&nbsp;&nbsp;Carrito de Compras</p>
-      <hr style="color: white; width: 145px;">
-      <p style="text-align: center;">0 Productos - S/. 0.0</p>
-    </div>
   </nav>
 </header>
 <section class="primerbloque">
   <article class="produtoanddescription">
     <div class="produtoanddescription__img-info">
       <div class="produtoanddescription__img-info__img">
-        <img src="IMAGEN/lavadora4.jpg" alt="Lavadora_17kg" width="600px">
+        <img src="IMAGEN/lavadora3.jpg" alt="Lavadora_17kg" width="600px">
         <figcaption>
-          <p>LG WT19BSS6H</p>
+          <p>LG F2WV9S8P2</p>
         </figcaption>
       </div>
       <div class="produtoanddescription__img-info__info">
         <div class="produtoanddescription__img-info__info__caracteristicas">
-        <h1>WT19BSS6H</h1>
-        <h3>Lavadora de 19 kg carga superior TurboWash 3D</h3>
-        <h3>6MotionDD, Steam y conectividad Wi-Fi</h3>
-        <h2>S/. 1,999</h2>
+        <h1>F2WV9S8P2</h1>
+        <h3>Lavadora inteligente fondo especial 46cm,</h3>
+        <h3>Eficiencia energética: un 30% más.</h3>
+        <h2>S/. 1,230</h2>
       </div>
       <div class="produtoanddescription__img-info__info__entrega">
         <div id="tabladecap">
@@ -181,35 +176,35 @@
       <table id="tablafichat">
         <tr>
           <th id="tablafichat_carac">CARACTERÍSTICAS</th>
-          <td id="tablafichat_carac_desc1">Tecnología TurboWash 3D.<br><br>
-            Steam Lavado a vapor. <br><br>
-            Limpieza Automática. 
+          <td id="tablafichat_carac_desc1">Lavado en 39 minutos media carga<br><br>
+            ahorrando un 39% de electricidad. <br><br>
+            CAPACIDAD (SERVICIOS): 8.5 Kg. 
           </td>
         </tr>
         <tr>
           <th id="tablafichat_esp">ESPECIFICACIONES</th>
           <td id="tablafichat_esp_desc2">
-          Peso 49 kg
+          Peso 60 kg
           <br><br>
-          Alto: 102cm <br>
-          Ancho: 63.2 cm<br>
-          Profundidad 67 cm
+          Alto: 600cm <br>
+          Ancho: 850 cm<br>
+          Profundidad 475 cm
           <br><br>
-          Potencia : 1500 W<br>
-          Doble carga: No<br>
-          Eficiencia energética : A
+          Consumo eléctrico)  144 (kWh/ año)<br>
+          Nivel sonoro: 52/27<br>
+          Consumo de agua 7.260 (l/ año)
           <br><br>
           Tipo de panel: digital<br>
           Cantidad de Programas  : 12
           <br><br>
-          Consumo de agua 230
+          Standby Power zero: Sí
           </td>
           
         </tr>
           <tr>
           <th id="tablafichat_list">Funciones destacadas</th>
-          <td id="tablafichat_list_desc3">Motor Inverter Direct Drive|TurboWash 3D|<br>
-          True Steam|6MotionDD|Smart Diagnosis|Smart ThinQ</td>
+          <td id="tablafichat_list_desc3">AI-Direct Drive con Inteligencia artificial<br>
+            TurboWash360™ (39 min) </td>
         </tr>
       </table>
     </div>
