--- a/product04.html
+++ b/product04.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DV90K6800EX Secadora SensorDry 9 kg</title>
+    <title>LG Lavadora de 19 kg</title>
 
     <link rel="stylesheet" href="../CSS/principal.css">
-    <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
+    <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/CSS/product04.css">
 
