enlaces a las paginas

--- a/sección-lavandería.html
+++ b/sección-lavandería.html
@@ -69,7 +69,7 @@
   <div id="aside_lavand_prodc_lg">
     <div class="prodc-lg">
       <div class="main-lavan-prodc-img">
-        <a href="/product04.html"> <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="250px" width="250px"></a>
+        <a href="product04.html"> <img src="IMAGEN/lavadora4.jpg" alt="lavadora LG" height="250px" width="250px"></a>
       </div>
       <div class="division_imagen_LG">
         <section class="seccion">
@@ -84,7 +84,7 @@
     </div>
     <div class="prodc-lg">
       <div class="main-lavan-prodc-img">
-        <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" alt="lavadora LG" height="250px" width="250px"></a>
+        <a href="product03.html"><img src="IMAGEN/lavadora3.jpg" alt="lavadora LG" height="250px" width="250px"></a>
       </div>
       <div class="division_imagen_LG">
         <section class="seccion">
@@ -101,7 +101,7 @@
   <div id="aside_lavand_prodc_smsng">
     <div class="prodc-smsng">
       <div class="main-lavan-prodc-img">
-        <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px"></a>
+        <a href="product01.html"><img src="IMAGEN/lavadora1.jpg" alt="lavadora LG" height="250px" width="250px"></a>
       </div>
       <section class="seccion">
         <h1>SAMSUNG</h1>
@@ -114,7 +114,7 @@
     </div>
     <div class="prodc-smsng">
       <div class="main-lavan-prodc-img">
-        <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" alt="lavadora LG" height="250px" width="250px"></a>        </div>
+        <a href="product02.html"><img src="IMAGEN/lavadora2.jpg" alt="lavadora LG" height="250px" width="250px"></a>        </div>
       <div class="division_imagen_LG">
         <section class="seccion">
           <h1>SAMSUNG</h1>
