style="cursor: pointer"

--- a/product01.html
+++ b/product01.html
@@ -99,7 +99,7 @@
 
 <section class="accion-compra">
   <a href="https://wa.me/message/M23MNKYLPLCEF1" style="text-decoration:none;">
-    <button class="accion-comra__boton">
+    <button class="accion-comra__boton" style="cursor: pointer">
       <img src="/IMAGEN/whatsapp-logo-png-transparent.png" 
       alt="whatsapp logo" width="30px">&nbsp;&nbsp;
       <h2>¡LO QUIERO!</h2>&nbsp;&nbsp;
