--- a/product03.html
+++ b/product03.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/principal.css">
     <link rel="shortcut icon" href="../JeanJaramillo-github.io/IMG/icono_del_navegador.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/product04.css">
+    <link rel="stylesheet" href="../CSS/product04.css">
 
     <script src="JS/product01.js" defer></script>
 </head>
