--- a/product02.html
+++ b/product02.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DV90K6800EX Secadora SensorDry 9 kg</title>
 
-    <link rel="stylesheet" href="../CSS/principal.css">
+    <link rel="stylesheet" href="CSS/principal.css">
     <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/product04.css">
+    <link rel="stylesheet" href="CSS/product04.css">
 
     <script src="JS/product01.js" defer></script>
 </head>
