--- a/product01.html
+++ b/product01.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DV90K6800EX Secadora SensorDry 9 kg</title>
 
-    <link rel="stylesheet" href="../CSS/principal.css">
+    <link rel="stylesheet" href="CSS/principal.css">
     <link rel="shortcut icon" href="IMAGEN/logo png.png"/>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/product04.css">
+    <link rel="stylesheet" href="CSS/product04.css">
 
     <script src="JS/product01.js" defer></script>
 </head>
@@ -123,7 +123,7 @@
   <div class="grid">
     <div class="bar4x4_1">
       <div class="favimg2">
-        <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" 
+        <a href="product02.html"><img src="IMAGEN/lavadora2.jpg" 
         alt="lav1" height="150px" width="150px"></a>
       </div>
       <div class="textin1">
@@ -133,7 +133,7 @@
     </div>
     <div class="bar4x4_2">
       <div class="favimg4">
-        <a href="/product04.html"><img src="IMAGEN/lavadora4.jpg" 
+        <a href="product04.html"><img src="IMAGEN/lavadora4.jpg" 
         alt="lav2" height="150px" width="150px"></a>
       </div>
       <div class="textin2">
@@ -143,7 +143,7 @@
     </div>
     <div class="bar4x4_3">
       <div class="favimg1">
-        <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" 
+        <a href="product01.html"><img src="IMAGEN/lavadora1.jpg" 
         alt="lav3" height="150px" width="150px"></a>
       </div>   
       <div class="textin3">
@@ -153,7 +153,7 @@
     </div>
     <div class="bar4x4_4">
       <div class="favimg3">
-        <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" 
+        <a href="product03.html"><img src="IMAGEN/lavadora3.jpg" 
         alt="lav4" height="150px" width="150px"></a>
       </div>
       <div class="textin4">
