--- a/product04.html
+++ b/product04.html
@@ -128,7 +128,7 @@
   <div class="grid">
     <div class="bar4x4_1">
       <div class="favimg2">
-        <a href="/product02.html"><img src="IMAGEN/lavadora2.jpg" 
+        <a href="product02.html"><img src="IMAGEN/lavadora2.jpg" 
         alt="lav1" height="150px" width="150px"></a>
       </div>
       <div class="textin1">
@@ -138,7 +138,7 @@
     </div>
     <div class="bar4x4_2">
       <div class="favimg4">
-        <a href="/product04.html"><img src="IMAGEN/lavadora4.jpg" 
+        <a href="product04.html"><img src="IMAGEN/lavadora4.jpg" 
         alt="lav2" height="150px" width="150px"></a>
       </div>
       <div class="textin2">
@@ -148,7 +148,7 @@
     </div>
     <div class="bar4x4_3">
       <div class="favimg1">
-        <a href="/product01.html"><img src="IMAGEN/lavadora1.jpg" 
+        <a href="product01.html"><img src="IMAGEN/lavadora1.jpg" 
         alt="lav3" height="150px" width="150px"></a>
       </div>   
       <div class="textin3">
@@ -158,7 +158,7 @@
     </div>
     <div class="bar4x4_4">
       <div class="favimg3">
-        <a href="/product03.html"><img src="IMAGEN/lavadora3.jpg" 
+        <a href="product03.html"><img src="IMAGEN/lavadora3.jpg" 
         alt="lav4" height="150px" width="150px"></a>
       </div>
       <div class="textin4">
