--- a/sección-empresas.html
+++ b/sección-empresas.html
@@ -121,8 +121,8 @@
                 <input type="text" name="nombre" id="nombre"><br>
                 <textarea name="opiniones" id="opiniones" cols="100%" rows="5"></textarea><br>
             </form>
-            <div id="boton_subir">
-             <button type="submit" value="Enviar">Enviar</button>
+            <div >
+             <button class="boton_subir" type="submit" value="Enviar">Enviar</button>
             </div>
         </div>
     </article>
